--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        tools:itemCount="1"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-60dp" />
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"
-        android:queryHint="Введите текст для поиска" />
+        tools:layout_editor_absoluteY="-60dp"
+        tools:listitem="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
