--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -2,17 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp"
     android:gravity="center">
-
 
     <ImageView
         android:id="@+id/category_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/categori_im"
+        android:src="@drawable/recipe1"
         android:layout_gravity="center" />
 
     <TextView
@@ -21,7 +19,6 @@
         android:layout_height="wrap_content"
         android:text="Item"
         android:textSize="16sp"
-        android:textColor="#FD7A17"
         android:gravity="center"
         android:layout_marginTop="4dp" />
 
