--- a/app/src/main/res/layout/item_favorite_recipe.xml
+++ b/app/src/main/res/layout/item_favorite_recipe.xml
@@ -11,12 +11,12 @@
         android:layout_width="411dp"
         android:layout_height="143dp"
         android:layout_gravity="center"
-        android:src="@drawable/recipe_det" />
+        android:src="@drawable/recipe1" />
 
     <TextView
         android:id="@+id/FavoriteRecipeTitle"
         android:layout_width="411dp"
-        android:layout_height="66dp"
+        android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:textSize="16sp" />
