--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,6 +17,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/nicknameTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,6 +28,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/emailTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profileImageView" />
 
@@ -37,6 +39,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/changePasswordButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nicknameTextView" />
 
@@ -45,6 +48,7 @@
         android:layout_width="416dp"
         android:layout_height="48dp"
         android:text="Change Password"
+        android:backgroundTint="#F6AC7F"
         app:layout_constraintBottom_toTopOf="@id/changePhotoButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Change Photo"
+        android:backgroundTint="#F6AC7F"
         app:layout_constraintBottom_toTopOf="@id/logoutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Logout"
+        android:backgroundTint="#F6AC7F"
         app:layout_constraintBottom_toTopOf="@id/deleteAccountButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -77,6 +83,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Delete Account"
+        android:backgroundTint="#F6AC7F"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,12 +94,11 @@
         android:id="@+id/deletePhotoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#F6AC7F"
         android:text="Delete Photo"
         app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
-        app:layout_constraintEnd_toStartOf="@+id/profileImageView"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702" />
+        app:layout_constraintVertical_bias="0.076"
+        tools:layout_editor_absoluteX="140dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
