--- a/app/src/main/res/layout/user_reg.xml
+++ b/app/src/main/res/layout/user_reg.xml
@@ -3,50 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="#FF9800">
 
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="25dp"
         android:hint="Email"
-        android:padding="16dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
-        tools:layout_editor_absoluteX="0dp" />
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/nicknameEditText"
+        tools:layout_editor_absoluteX="34dp" />
 
     <EditText
         android:id="@+id/nicknameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
         android:hint="Никнейм"
-        android:padding="16dp"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
+        android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="108dp"
+        android:layout_marginTop="25dp"
         android:hint="Пароль"
-        android:padding="16dp"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEditText"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
         tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/confirmPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
+        android:layout_marginTop="25dp"
         android:hint="Повторный пароль"
-        android:padding="16dp"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/selectPhotoButton"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
@@ -62,20 +63,26 @@
 
     <Button
         android:id="@+id/selectPhotoButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Выбрать фото"
+        android:layout_width="300dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#F6AC7F"
         android:padding="16dp"
+        android:text="Выбрать фото"
         app:layout_constraintBottom_toTopOf="@+id/regButton"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/regButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Зарегистрироваться"
+        android:layout_width="301dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#F6AC7F"
         android:padding="16dp"
+        android:text="Зарегистрироваться"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
